Adicionei o link do meu insta e um poema foda

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Talita</h1>
+    <h1>Talita Santos</h1>
+    <h2>Instagram: <a href="https://www.instagram.com/talita.santos__/">@talita.santos__</a></h2>
     <img src="imagem.jpg" alt="" srcset="" height="400px">
+    <h3>Don't get lost from yourself</h3>
 </body>
 </html>
